[gd_scene load_steps=8 format=3 uid="uid://dptm1u8hlwvts"]

[ext_resource type="Script" path="res://test/scene_1/scene_1.gd" id="1_1m4h4"]
[ext_resource type="PackedScene" uid="uid://dglevwajcmaps" path="res://test/character_2/character_2.tscn" id="1_ustih"]
[ext_resource type="Resource" uid="uid://c6rgit7rm5ih1" path="res://test/scene_1/resource/magic.tres" id="2_ku030"]
[ext_resource type="Resource" uid="uid://cavvoiup7837a" path="res://test/scene_1/resource/kick.tres" id="3_ovbw1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5l3i3"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_l5wrw"]
sky_material = SubResource("ProceduralSkyMaterial_5l3i3")

[sub_resource type="Environment" id="Environment_tlcda"]
background_mode = 2
sky = SubResource("Sky_l5wrw")
tonemap_mode = 2
glow_enabled = true

[node name="Scene_1" type="Node"]
script = ExtResource("1_1m4h4")
anim_list = Array[Resource("res://test/scene_1/animation_resource.gd")]([ExtResource("3_ovbw1"), ExtResource("2_ku030")])

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlcda")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Character2" parent="." instance=ExtResource("1_ustih")]
transform = Transform3D(0.969948, 0, -0.24331, 0, 1, 0, 0.24331, 0, 0.969948, 0, 0, 0)
anim_list = Array[Resource("res://test/scene_1/animation_resource.gd")]([ExtResource("3_ovbw1"), ExtResource("2_ku030")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 50.0
offset_right = 420.0
offset_bottom = 200.0

[node name="OriginContainer" type="ScrollContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer/OriginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="AllActionVBox" type="VBoxContainer" parent="CanvasLayer/PanelContainer/OriginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddButton" type="Button" parent="CanvasLayer"]
offset_left = 118.0
offset_top = 259.0
offset_right = 190.0
offset_bottom = 290.0
text = "新增动作"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 330.0
offset_right = 488.0
offset_bottom = 460.0

[node name="CurrentContainer" type="ScrollContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer2/CurrentContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CurrentVBox" type="VBoxContainer" parent="CanvasLayer/PanelContainer2/CurrentContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SyncButton" type="Button" parent="CanvasLayer"]
offset_left = 403.0
offset_top = 261.0
offset_right = 443.0
offset_bottom = 292.0
text = "同步"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.15895, 2)
current = true

[connection signal="pressed" from="CanvasLayer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SyncButton" to="." method="_on_sync_button_pressed"]
